--- a/FrontProactIF/src/main/webapp/cloturerIntervention.html
+++ b/FrontProactIF/src/main/webapp/cloturerIntervention.html
@@ -8,7 +8,7 @@
         <script>
             verificationEmploye();
         </script>
-        <link rel = "stylesheet" href = "navbar.css"/>
+        <link rel = "stylesheet" href = "cloturerIntervention.css"/>
     </head>
     <body>
         <ul>
