--- a/FrontProactIF/src/main/webapp/index.html
+++ b/FrontProactIF/src/main/webapp/index.html
@@ -53,7 +53,7 @@
                         if (data.type === "client") {
                             window.location = "historique.html";
                         } else if (data.type === "employe") {
-                            window.location = "carte-exemple.html";
+                            window.location = "interventionCoursEmploye.html";
                         }
                     } else {
                         console.log(data.connexion);
