--- a/FrontProactIF/src/main/webapp/tableauBord.html
+++ b/FrontProactIF/src/main/webapp/tableauBord.html
@@ -21,8 +21,8 @@
     <body>
         <ul>
             <li><a href="interventionCoursEmploye.html">Intervention en cours</a></li>
-            <li><a class="active" href="cloturerIntervention.html">Cloturer l'intervention</a></li>
-            <li><a href="tableauBord.html">Tableau de Bord</a></li>
+            <li><a href="cloturerIntervention.html">Cloturer l'intervention</a></li>
+            <li><a class="active" href="tableauBord.html">Tableau de Bord</a></li>
             <li style="float:right"><a href="index.html" onclick="deconnexion()">Deconnexion</a></li>
         </ul>
         <h1>Interventions du jour</h1>
